<resources>
    <string name="app_name">AndroidCapstone</string>
    <string name="facebook_app_id">499584537506888</string>
    <string name="fb_login_protocol_scheme">fb499584537506888</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id">ca-app-pub-9870987900742302~7422383191</string>

    <string name="user_email_hint">Email Address</string>
    <string name="user_password_hint">Password</string>
    <string name="log_in_button_text">LOG IN</string>
    <string name="or_log_in_with">OR LOG IN WITH</string>
    <string name="overwatch_league_logo_description">Overwatch League Logo</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="display_name_hint">Display Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_item_news">News</string>
    <string name="nav_item_teams">Teams</string>
    <string name="nav_item_players">Players</string>
    <string name="nav_item_logout">Log Out</string>
    <string name="nav_header_desc">Overwatch League Logo</string>
    <string name="nav_purchase">Purchase</string>
    <string name="nav_item_tickets">Tickets</string>
    <string name="nav_item_store">Store</string>
    <string name="nav_item_schedule">Schedule</string>
    <string name="nav_item_feedback">Feedback</string>
    <string name="nav_item_about">About Overwatch League</string>
    <string name="misc">Misc</string>
    <string name="feedback_email_hint">Email Address</string>
    <string name="feedback_body_hint">Describe your feedback</string>
    <string name="feedback_button_text">SEND FEEDBACK</string>
    <string name="share_text">SHARE</string>
    <string name="news_post_thumbnail_description">Thumbnail of news post</string>
    <string name="description_toolbar_logo">Overwatch League Logo</string>

</resources>
