<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.androidcapstone.viewmodel.FeedbackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.fragments.FeedbackFragment">

        <ImageView
            android:id="@+id/ivFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_owl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvStatusMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@{viewModel.statusMessage}"
            app:layout_constraintTop_toBottomOf="@+id/ivFeedback"/>

        <EditText
            android:id="@+id/etFeedbackEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:hint="@string/feedback_email_hint"
            android:textAlignment="center"
            android:layout_margin="6dp"
            android:text="@={viewModel.feedbackEmail}"
            app:layout_constraintTop_toBottomOf="@id/tvStatusMessage"/>

        <EditText
            android:id="@+id/etFeedbackBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/feedback_body_hint"
            android:textAlignment="center"
            android:layout_margin="6dp"
            android:text="@={viewModel.feedbackBody}"
            app:layout_constraintTop_toBottomOf="@+id/etFeedbackEmail"
            app:layout_constraintBottom_toTopOf="@id/btnFeedbackSend"/>

        <Button
            android:id="@+id/btnFeedbackSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_button_text"
            android:layout_margin="6dp"
            android:onClick="@{(v)->viewModel.onSendFeedback(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>